--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,6 @@
     <center><h1>Printing python output on a webpage</h1></center>
     <p style="font-family: fantasy;">{{ message }}</p>
     <br>
-    <p> {{ message2 }}</p>
+    <p style="font-family: fantasy;"> {{ message2 }}</p>
 </body>
 </html>
