--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask the test app</title>
+    <link rel="stylesheet" href="../static/files/css/lightslider.css">
+    <link rel="stylesheet" href="../static/files/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/files/style.css">
+    <script src="../static/files/js/bootstrap.bundle.js"></script>
+    <script src="../static/files/js/jquery.js"></script>
+    <script src="../static/files/js/lightslider.js"></script>
+    <script src="../static/files/js/script.js"></script>
 </head>
-<body style="background-color: antiquewhite;">
+<body style="background-image: url('../static/files/images/paper.jpg');">
     <center><h1>Printing python output on a webpage</h1></center>
+    <section class="row">
+        <div class="col-md-6">
+            <img src="../static/files/images/trees-3294681_1280.jpg" alt="" width="100%" height="350px">
+        </div>
+        <div class="col-md-6">
+            <img src="../static/files/images/forest-868715_1280.jpg" alt="" width="100%" height="350px">
+        </div>
+    </section>
+    <br>
     <p style="font-family: fantasy;">{{ message }}</p>
     <br>
     <p style="font-family: fantasy;"> {{ message2 }}</p>
@@ -15,8 +31,14 @@
         <input type="text" name="name" placeholder="Enter your name">
         <input type="submit" value="submit">
     </form>
+    <br>
     {% if name %}
         <p style="font-family: fantasy;">Hi, {{ name.title() }}, Welcome to my webpage ( ^ _ ^ )</p>
+        <p style="font-family: 'Courier New', Courier, monospace; color: green;">{{ success }}</p>
+    {% endif %}
+
+    {% if error_message %}
+        <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message }}</p>
     {% endif %}
 </body>
 </html>
