--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,8 @@
     <p style="font-family: fantasy;"> {{ message2 }}</p>
     <br>
     <form action="/process" method="post">
-        <input type="text" name="name" placeholder="Enter your name">
+        <input type="text" name="name" placeholder="Enter your name"><br><br><br>
+        <input type="password" name="password" placeholder="Enter your password"><br><br><br>
         <input type="submit" value="submit">
     </form>
     <br>
@@ -36,9 +37,7 @@
         <p style="font-family: fantasy;">Hi, {{ name.title() }}, Welcome to my webpage ( ^ _ ^ )</p>
         <p style="font-family: 'Courier New', Courier, monospace; color: green;">{{ success }}</p>
     {% endif %}
-
-    {% if error_message %}
-        <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message }}</p>
-    {% endif %}
+    <br><br><br><br>
+    <p style="font-family: 'Courier New', Courier, monospace;color: blue;">Create your account here <a href="/signin">signup</a></p>
 </body>
 </html>
