--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,8 @@
     <br>
     <p style="font-family: fantasy;"> {{ message2 }}</p>
     <br>
-    <form action="/process" method="post">
+    <p style="font-size: medium;">{{ message3 }}</p>
+    <form action="/process" method="post" align="center">
         <input type="text" name="name" placeholder="Enter your name"><br><br><br>
         <input type="password" name="password" placeholder="Enter your password"><br><br><br>
         <input type="submit" value="submit">
@@ -37,7 +38,7 @@
         <p style="font-family: fantasy;">Hi, {{ name.title() }}, Welcome to my webpage ( ^ _ ^ )</p>
         <p style="font-family: 'Courier New', Courier, monospace; color: green;">{{ success }}</p>
     {% endif %}
-    <br><br><br><br>
+    <br><br>
     <p style="font-family: 'Courier New', Courier, monospace;color: blue;">Create your account here <a href="/signin">signup</a></p>
 </body>
 </html>
