--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,19 +14,46 @@
 </head>
 <body style="background-image: url('../static/files/images/paper.jpg');">
     <center><h1>Lets do this ASAP!</h1></center>
-    <form action="/signin" align="center">
-        <input type="text" name="name", placeholder="Enter your name"><br><br><br>
-        <input type="password" name="password" placeholder="Enter your password"><br><br><br>
-        <input type="submit" value="save">
+    <form id="putForm" action="/signin" method="PUT" align="center">
+        <input type="text" id="name" name="name" placeholder="Enter your name"><br><br><br>
+        <input type="password"  id="password" name="password" placeholder="Enter your password"><br><br><br>
+        <input type="button" value="save" onclick="submitForm()">
     </form>
     <br><br><br>
-    {% if name %}
-        <p style="font-family: 'Courier New', Courier, monospace;color: green;">Details successfully stored</p>
-    {% endif %}
-
     {% if error_message %}
-        <p style="font-family: 'Courier New', Courier, monospace;color: red;"> {{ error_message }}</p>
+        <p style="font-family: 'Courier New', Courier, monospace;color: red"> {{ error_message }}</p>
+    {% endif %}
+    {% if saved %}
+        <p style="font-family: 'Courier New', Courier, monospace; color: green;">{{ saved }}</p>
     {% endif %}
     <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;color: blue;">Go to <a href="/"> homepage </a></p>
+
+
+    <script>
+        function submitForm() {
+            const name = document.getElementById('name').value;
+            const password = document.getElementById('password').value;
+    
+            fetch('/signin', {
+                method: 'PUT',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ name, password }),
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                console.log('Success:', data);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+        }
+    </script>
 </body>
 </html>
