--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <section class="row">
     <div style="background-color: transparent;">
-    <p style="font-family: 'Courier New', Courier, monospace;">Go to <a href="/">Hompage</a></p><br>
-    <p style="font-family: 'Courier New', Courier, monospace;">Go to <a href="/signin">Signup page</a></p>
+    &nbsp;&nbsp;&nbsp;<p style="font-family: 'Courier New', Courier, monospace;">Go to <a href="/">Hompage</a></p><br>
+    &nbsp;&nbsp;&nbsp;<p style="font-family: 'Courier New', Courier, monospace;">Go to <a href="/signin">Signup page</a></p>
     </div>
 </section>
 
