--- a/templates/home.html
+++ b/templates/home.html
@@ -29,9 +29,9 @@
     <br>
     <p style="font-size: medium;">{{ message3 }}</p>
     <form action="/process" method="post" align="center">
-        <input type="text" name="name" placeholder="Enter your name"><br><br><br>
+        <input type="text" name="name" placeholder="Enter your username"><br><br><br>
         <input type="password" name="password" placeholder="Enter your password"><br><br><br>
-        <input type="submit" value="submit">
+        <input type="submit" value="Login" style="font-family: 'Courier New', Courier, monospace;">
     </form>
     <br>
     {% if name %}
