--- a/templates/home.html
+++ b/templates/home.html
@@ -28,11 +28,24 @@
     <p style="font-family: fantasy;"> {{ message2 }}</p>
     <br>
     <p style="font-size: medium;">{{ message3 }}</p>
-    <form action="/process" method="post" align="center">
-        <input type="text" name="name" placeholder="Enter your username"><br><br><br>
-        <input type="password" name="password" placeholder="Enter your password"><br><br><br>
-        <input type="submit" value="Login" style="font-family: 'Courier New', Courier, monospace;">
-    </form>
+
+    <center>
+        <div class="col-md-3" align="center" style="background-color: rgb(225, 208, 186); border-radius: 7px;">
+            <br><br>
+        <form action="/process" method="post" align="center">
+            {% if error_message8 %}
+                <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message8 }}</p>
+            {% endif %}
+            <input type="text" name="name" placeholder="Enter your username"><br><br><br>
+            <input type="password" name="password" placeholder="Enter your password"><br><br><br>
+            {% if error_message7 %}
+                <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message7 }}</p>
+            {% endif %}
+            <input type="submit" value="Login" style="font-family: 'Courier New', Courier, monospace; background-color: rgb(244, 176, 176);">
+        </form>
+        <br><br>
+        </div>
+    </center>
     <br>
     {% if name %}
         <p style="font-family: fantasy;">Hi, {{ name.title() }}, Welcome to my webpage ( ^ _ ^ )</p>
@@ -40,7 +53,15 @@
     {% endif %}
 
     {% if error_message4 %}
-        <p style="font-family: 'Courier New', Courier, monospace;color: green;">{{ error_message4 }}</p>
+        <p style="font-family: 'Courier New', Courier, monospace;color: red;" align="center"><b>{{ error_message4 }}</b></p>
+    {% endif %}
+
+    {% if error_message5 %}
+        <p style="font-family: 'Courier New', Courier, monospace; color: red;" align="center">{{ error_message5 }}</p>
+    {% endif %}
+    
+    {% if error_message6 %}
+        <p style="font-family: 'Courier New', Courier, monospace; color: red;" align="center">{{ error_message6 }}</p>
     {% endif %}
     <br><br>
     <p style="font-family: 'Courier New', Courier, monospace;color: blue;">Create your account here <a href="/signin">signup</a></p>
