--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,11 +14,17 @@
 </head>
 <body style="background-image: url('../static/files/images/paper.jpg');">
     <center><h1>Lets do this ASAP!</h1></center>
-    <form id="putForm" action="/signin" method="PUT" align="center">
-        <input type="text" id="name" name="name" placeholder="Enter your name"><br><br><br>
-        <input type="password"  id="password" name="password" placeholder="Enter your password"><br><br><br>
-        <input type="button" value="save" onclick="submitForm()">
-    </form>
+    <center>
+        <div class="col-md-3" align="center" style="background-color: antiquewhite; border-radius: 7px;">
+            <br><br>
+         <form id="putForm" action="/signin" method="POST">
+            <input type="text" id="name" name="name" placeholder="Enter your name"><br><br><br>
+            <input type="password"  id="password" name="password" placeholder="Enter your password"><br><br><br>
+            <input type="button" value="save" onclick="submitForm()" style="color: rgb(35, 37, 35); background-color: rgb(3, 173, 3);">
+        </form>
+        <br><br>
+       </div>
+    </center>  
     <br><br><br>
 
 
@@ -30,7 +36,7 @@
             const password = document.getElementById('password').value;
     
             fetch('/signin', {
-                method: 'PUT',
+                method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
@@ -56,13 +62,14 @@
     {% if saved %}
         <p style="font-family: 'Courier New', Courier, monospace; color: green;">{{ saved }}</p>
     {% endif %}
-    {% if error2 %}
-        <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error2 }}</p>
+    {% if error3 %}
+        <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error3 }}</p>
     {% endif %}
+
 
     <marquee behavior="" direction=""><p style="font-family:'Courier New', Courier, monospace; color: brown;"><b>PAGE STILL UNDER DEVELOPMENT!!!</b></p></marquee> 
 
 
-<p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;color: blue;">Go to <a href="/"> homepage </a></p>
+<p style="font-family: 'Courier New', Courier, monospace;color: blue;" align="center"><b> Back to </b><a href="/" style="font-family: 'Courier New', Courier, monospace;"  > <b>homepage </b></a></p>
 </body>
 </html>
