--- a/templates/home.html
+++ b/templates/home.html
@@ -69,10 +69,14 @@
         </div>
     </section>
     <br>
+    <p style="font-family: 'Courier New', Courier, monospace;" align="right">{{ c_time }}</p>
+    <br>
     <p style="font-family: fantasy;">{{ message }}</p>
     <br>
     <p style="font-family: fantasy;"> {{ message2 }}</p>
     <br>
     <p style="font-size: medium;">{{ message3 }}</p>
+    <br><br>
+    
 </body>
 </html>
