--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <section class="row">
-    <div class="navbar navbar-expand-lg" style="background-color: antiquewhite;">
+    <div class="navbar navbar-expand-lg" style="background-color: antiquewhite; position: fixed; top: 0; width: 100%;">
         <a href="#" class="navbar-brand text-dark" style="font-family: fantasy;">SHOE HUB</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar">
             <span class="navbar-toggler-icon"></span>
