--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,18 @@
 <section class="row">
-    <div style="background-color: transparent;">
-    &nbsp;&nbsp;&nbsp;<p style="font-family: 'Courier New', Courier, monospace;">Go to <a href="/">Hompage</a></p><br>
-    &nbsp;&nbsp;&nbsp;<p style="font-family: 'Courier New', Courier, monospace;">Go to <a href="/signin">Signup page</a></p>
+    <div style="background-color: rgb(225, 208, 186);">
+    <!-- all styles of icons (in Font Awesome Classic by default) -->
+
+    <span style="font-size: 25px; color: blueviolet; margin-left: 10px;">
+        <i class="fa-brands fa-instagram"></i>
+    </span>
+    <br>
+    <span style="font-size: 25px; color: rgb(45, 46, 47); margin-left: 10px;">
+        <i class="fa-brands fa-x-twitter"></i>
+    </span>
+    <br>
+    <span style="font-size: 25px; color: rgb(13, 224, 30); margin-left: 10px;">
+        <a href=""></a><i class="fa-brands fa-whatsapp"></i>
+    </span>
     </div>
 </section>
 
