--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,8 +6,11 @@
         </button>
         <div class="navbar-nav">
             <div class="collapse navbar-collapse" id="navbar">
-                <a href="/" class="nav-link active"  style="font-family: 'Courier New', Courier, monospace;"><b>Homepage</b></a>
-                <a href="/signin" class="nav-link"  style="font-family: 'Courier New', Courier, monospace;"><b>Signup page</b></a>
+                <a href="/"  class="nav-link active" style="font-family: 'Courier New', Courier, monospace; color: blue;">
+                    <span style="font-size: 25px; color: blue;">
+                        <i class="fa-solid fa-house"></i>
+                    </span>
+                </a>
             </div>
         </div>
         <div class="ms-auto">
