--- a/templates/nav2.html
+++ b/templates/nav2.html
@@ -1,17 +1,32 @@
 <section class="row">
     <div class="navbar navbar-expand-lg" style="background-color: antiquewhite;">
-        <a href="#" class="navbar-brand text-dark" style="font-family: fantasy;">SHOE HUB</a>
+        <a href="/" class="navbar-brand text-dark" style="font-family: fantasy;">
+            <span style="font-size: 25px; color: rgb(116, 79, 113);">
+                <i class="fa-solid fa-shoe-prints"></i>
+            </span>
+            SHOE HUB
+        </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-nav">
             <div class="collapse navbar-collapse" id="navbar">
-                <a href="/signin"  class="nav-link active" style="font-family: 'Courier New', Courier, monospace; color: blue;"><b>Create account</b></a>
             </div>
         </div>
         <div class="ms-auto">
             <div class="navbar-nav">
-                <a href="/login" class="nav-link" style="font-family: 'Courier New', Courier, monospace;color: rgb(4, 127, 250);"><b>Login</b></a>
+                <a href="/signin"  class="nav-link active" style="font-family: 'Courier New', Courier, monospace; color: blue;">
+                    <span style="font-size: 25px; color: rgb(68, 239, 80);">
+                        <i class="fa-solid fa-user-plus fa-flip"></i>
+                    </span>
+                    <b>Signup | </b>
+                </a>
+                <a href="/login" class="nav-link" style="font-family: 'Courier New', Courier, monospace;color:rgb(4, 76, 149);">
+                    <span style="font-size: 25px; color: blue;">
+                        <i class="fa-solid fa-user fa-bounce"></i>
+                    </span>
+                    <b>Login</b>
+                </a>
             </div>
         </div>
     </div>
