--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,6 +11,7 @@
     <script src="../static/files/js/jquery.js"></script>
     <script src="../static/files/js/lightslider.js"></script>
     <script src="../static/files/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/ecc22ccf0c.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-image: url('../static/files/images/paper.jpg');">
     {% include 'nav3.html' %}
