--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,7 @@
     <script src="../static/files/js/jquery.js"></script>
     <script src="../static/files/js/lightslider.js"></script>
     <script src="../static/files/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/ecc22ccf0c.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-image: url('../static/files/images/paper.jpg');">
     {% include 'nav4.html' %}
@@ -23,6 +24,9 @@
                 <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message8 }}</p>
             {% endif %}
             <input type="text" name="name" placeholder="Enter your username"><br><br><br>
+            {% if error_message9 %}
+                <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message9 }}</p>
+            {% endif %}
             <input type="password" name="password" placeholder="Enter your password"><br><br><br>
             {% if error_message7 %}
                 <p style="font-family: 'Courier New', Courier, monospace; color: red;"> {{ error_message7 }}</p>
