--- a/templates/nav3.html
+++ b/templates/nav3.html
@@ -6,12 +6,21 @@
         </button>
         <div class="navbar-nav">
             <div class="collapse navbar-collapse" id="navbar">
-                <a href="/"  class="nav-link active" style="font-family: 'Courier New', Courier, monospace; color: blue;"><b>Homepage</b></a>
+                <a href="/"  class="nav-link active" style="font-family: 'Courier New', Courier, monospace; color: blue;">
+                    <span style="font-size: 25px; color: blue;">
+                        <i class="fa-solid fa-house"></i>
+                    </span>
+                </a>
             </div>
         </div>
         <div class="ms-auto">
             <div class="navbar-nav">
-                <a href="/login" class="nav-link" style="font-family: 'Courier New', Courier, monospace;color:rgb(4, 127, 250);"><b>Login</b></a>
+                <a href="/login" class="nav-link" style="font-family: 'Courier New', Courier, monospace;color:rgb(4, 127, 250);">
+                    <span style="font-size: 25px; color: blue;">
+                        <i class="fa-solid fa-user"></i>
+                    </span>
+                    <b>Login</b>
+                </a>
             </div>
         </div>
     </div>
