--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="font-family: 'Courier New', Courier, monospace;">SHOE HUB</title>
+    <title style="font-family: 'Courier New', Courier, monospace;">SHOE CO™</title>
     <link rel="stylesheet" href="../static/files/css/lightslider.css">
     <link rel="stylesheet" href="../static/files/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/files/style.css">
@@ -91,7 +91,36 @@
 
     <section class="row">
         <div class="col-md-7">
-
+            <div class="card-item">
+                <div class="card-body">
+                    <h4 class="card-title" align="center">Categories present</h4>
+                    <br><br>
+                    <ol style="margin-left: 124px;">
+                        <li>Loafer</li>
+                        <li>Sneakers</li>
+                        <li>Ballet flats</li>
+                        <li>Sandal</li>
+                        <li>Oxford Shoes</li>
+                        <li>Platform shoes</li>
+                        <li>Boot</li>
+                        <li>Derby shoe</li>
+                        <li>Brogue shoe</li>
+                        <li>Chelsea boots</li>
+                        <li>Slippers</li>
+                        <li>Kitten heel</li>
+                        <li>Stiletto heel</li>
+                        <li>Moccasin</li>
+                        <li>Dress shoe</li>
+                        <li>Clog</li>
+                        <li>Chukka boot</li>
+                        <li>Mary Jane</li>
+                        <li>Court Shoe</li>
+                        <li>Boat Shoes</li>
+                        <li>Espadrille</li>
+                        <li>Hiking boot</li>
+                    </ol>
+                </div>
+            </div>
         </div>
         <div class="col-md-5">
             <div class="card" style="background-color: rgb(219, 238, 238); border-radius: 7px;" align="right">
