--- a/templates/nav4.html
+++ b/templates/nav4.html
@@ -1,6 +1,6 @@
 <section class="row">
     <div class="navbar navbar-expand-lg" style="background-color: antiquewhite;">
-        <a href="#" class="navbar-brand text-dark" style="font-family: fantasy;">SHOE HUB</a>
+        <a href="#" class="navbar-brand text-dark" style="font-family: fantasy;">SHOE CO™</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
